--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   <link href="./assets/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
   <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
+  <link rel="stylesheet" type="text/css" href="./assets/styles/cart.css">
+  <link rel="stylesheet" type="text/css" href="./assets/styles/cart_responsive.css">
   <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/animate.css">
   <link rel="stylesheet" type="text/css" href="./assets/styles/product.css">
   <link rel="stylesheet" type="text/css" href="./assets/styles/product_responsive.css">
@@ -19,6 +21,7 @@
   <link rel="stylesheet" type="text/css" href="./assets/styles/contact_responsive.css">
   <link rel="stylesheet" type="text/css" href="./assets/styles/main_styles.css">
   <link rel="stylesheet" type="text/css" href="./assets/styles/responsive.css">
+
 
 </head>
 <body>
